Bug 693268: reinstate big references.

To make big references compatible with 8-byte alignment on 32-bit Windows
force ref structure to take 16 bytes by adding a dummy uint64_t member
to the union.