gs/psi/iref.h
@@ -377,7 +377,7 @@ typedef int (*op_proc_t)(i_ctx_t *i_ctx_p);
 struct tas_s {
 /* type_attrs is a single element for fast dispatching in the interpreter */
     ushort type_attrs;
-    ushort rsize;
+    uint32_t rsize;
 };
 struct ref_s {
 
@@ -407,6 +407,7 @@ struct ref_s {
         struct stream_s *pfile;
         struct gx_device_s *pdevice;
         obj_header_t *pstruct;
+        uint64_t dummy; /* force 16-byte ref on 32-bit platforms */
     } value;
 };
 
@@ -563,7 +564,7 @@ struct ref_s {
 /* Select reasonable values for PDF interpreter */
 /* The maximum array size cannot exceed max_uint/arch_sizeof_ref */
 /* because the allocator cannot allocate a block larger than max_uint. */
-#define max_array_size  max_ushort
-#define max_string_size max_ushort
+#define max_array_size  (16*1024*1024)
+#define max_string_size (16*1024*1024)
 
 #endif /* iref_INCLUDED */
